--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
   --primary-color: #6495ed;
 }
 
-body {
+* {
   font-family: "Poppins", sans-serif;
 }
 
@@ -52,7 +52,7 @@ nav li a {
 nav input {
   width: 20em;
   margin-top: 8px;
-  padding: 10px 20px;
+  padding: 8px 20px;
   border-radius: 12px;
   border: 2px solid darkslateblue;
 }
@@ -75,4 +75,51 @@ nav input {
   font-size: 2.5em;
   font-weight: bold;
   color: darkslateblue;
+}
+
+/* CARD - PRODUTOS */
+
+.lista-produtos {
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+.card {
+  width: 18%;
+  height: 25%;
+  padding: 10px;
+  margin: 0 10px;
+  border: 2px solid rgba(0, 0, 0, 0.148);
+  border-radius: 12px;
+}
+
+.card img {
+  width: 100%;
+}
+
+.prod-desc {
+  text-align: center;
+  margin: 0 0 10px 0;
+}
+
+.card-detalhes {
+  background-color: rgba(112, 128, 144, 0.288);
+  padding: 10px;
+  border-radius: 12px;
+}
+
+.prod-precAntigo {
+  font-size: 12px;
+  text-decoration: line-through;
+}
+
+.prod-precoAtual {
+  font-weight: 600;
+  color: blue;
+  margin: 5px 0;
+}
+
+.prod-parcelamento {
+  font-size: 12px;
 }
