--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,7 @@ header {
 
 header input {
   width: 40%;
+  font-size: 1.2em;
   border-radius: 12px;
   padding: 5px 15px;
   border: 2px solid darkslateblue;
@@ -50,15 +51,16 @@ header input {
 /* BANNER - CATALOGO */
 
 .header-catalogo {
-  background: linear-gradient(270deg, #c77777, #4579db48);
-  padding: 20px 40px;
+  background: linear-gradient(270deg, #0000005d, #c77777);
+  padding: 30px 40px;
 }
 
 .header-catalogo p {
-  font-size: 1.2em;
+  font-size: 1.5em;
   font-weight: 500;
-  color: white;
+  color: rgb(255, 255, 255);
   text-shadow: 2px 2px 4px #000000;
+  margin-bottom: 7px;
   /* padding: 15px 0 0 40px; */
 }
 
@@ -76,29 +78,39 @@ header input {
   flex-wrap: wrap;
   justify-content: space-around;
   padding: 30px;
+  background-color: #000000;
 }
 
 /* CARD - PRODUTOS */
 
 .card {
   width: 17%;
-  margin: 10px;
-  border: 2px solid rgba(0, 0, 0, 0.238);
+  margin: 30px 15px;
+  border-left: 5px solid var(--primary-color);
+  border-right: 5px solid var(--primary-color);
   border-radius: 12px;
   background-color: #000000;
   display: grid;
   justify-items: center;
 }
 
+.card:hover {
+  border-left: 5px solid rgb(211, 218, 20);
+  border-right: 5px solid rgb(211, 218, 20);
+  transform: scale(1.05);
+  transition: 0.7s;
+  margin: 20px 0;
+  font-size: 20px;
+}
+
 .card .descricao {
   text-align: center;
   margin: 7px 0;
-  width: 100px;
-  font-size: 12px;
+  width: 80%;
   color: white;
 }
 
-.card .preco{
+.card .preco {
   text-align: center;
   color: #c77777;
   font-weight: bold;
@@ -121,17 +133,21 @@ footer {
 }
 
 footer img {
-  width: 120px;
+  width: 200px;
 }
 
 .indicacao {
   display: flex;
 }
 
+fieldset{
+  margin: 20px 0;
+}
+
 legend {
   color: white;
   font-family: "Poppins", sans-serif;
-  font-size: 12px;
+  font-size: 16px;
   margin: 8px 0;
 }
 
@@ -139,6 +155,7 @@ footer input {
   padding-left: 15px;
   border-radius: 6px 0 0 6px;
   border: none;
+  font-size: 18px;
 }
 
 .btn-indicacao {
@@ -157,4 +174,43 @@ footer input {
 
 .btn-indicacao:active {
   background-color: rgb(6, 51, 6);
+}
+
+/* MODAL - TESTE */
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
