--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,9 +38,9 @@ header {
 
 header input {
   width: 40%;
-  font-size: 1.2em;
+  font-size: 1.0em;
   border-radius: 12px;
-  padding: 5px 15px;
+  padding: 7px 15px;
   border: 2px solid darkslateblue;
 }
 
@@ -98,7 +98,7 @@ header input {
 .card:hover {
   border-left: 5px solid rgb(211, 218, 20);
   border-right: 5px solid rgb(211, 218, 20);
-  transform: scale(1.);
+  transform: scale(1);
   transition: 0.7s;
   margin: 20px 0;
   font-size: 20px;
@@ -106,16 +106,19 @@ header input {
 
 .card .descricao {
   text-align: center;
-  margin: 7px 0;
+  /* margin: 7px 0; */
+  margin-top: 7px;
   width: 80%;
   color: white;
+  font-weight: 600;
 }
 
 .card .preco {
   text-align: center;
   color: #c77777;
   font-weight: bold;
-  margin: 5px 0;
+  /* margin: 10px 0; */
+  padding: 14px;
 }
 
 .card img {
@@ -141,7 +144,7 @@ footer img {
   display: flex;
 }
 
-fieldset{
+fieldset {
   margin: 20px 0;
 }
 
@@ -157,6 +160,7 @@ footer input {
   border-radius: 6px 0 0 6px;
   border: none;
   font-size: 18px;
+  margin-top: 5px;
 }
 
 .btn-indicacao {
@@ -164,8 +168,9 @@ footer input {
   border: none;
   color: white;
   background-color: green;
-  display: flex;
+  /* display: flex; */
   align-items: center;
+  margin-top: 5px;
 }
 
 .indicacao img {
@@ -175,4 +180,44 @@ footer input {
 
 .btn-indicacao:active {
   background-color: rgb(6, 51, 6);
+}
+
+/* Scrollbar */
+
+/* tamanho */
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: black;
+}
+
+/* barra fixa */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgb(0, 0, 0);
+}
+
+/* barra acompanhamento */
+::-webkit-scrollbar-thumb {
+  background: #6495ed;
+  border-radius: 3px;
+  border: 2px solid black;
+}
+
+/* Categorias */
+
+.categorias {
+  padding: 10px 30px;
+  background: url("../img/background-img.jpg");
+}
+
+.categorias ul{
+  display: flex;
+  justify-content: space-around;
+}
+
+.categorias a{
+  text-decoration: none;
+  /* color: #202f4b; */
+  color: white;
+  font-weight: 600;
+  padding-left: 5px;
 }
