--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ header {
 
 header input {
   width: 40%;
-  font-size: 1.0em;
+  font-size: 1em;
   border-radius: 12px;
   padding: 7px 15px;
   border: 2px solid darkslateblue;
@@ -209,15 +209,22 @@ footer input {
   background: url("../img/background-img.jpg");
 }
 
-.categorias ul{
+.categorias ul {
   display: flex;
   justify-content: space-around;
+  padding: 7px 0;
 }
 
-.categorias a{
+.categorias a {
   text-decoration: none;
   /* color: #202f4b; */
   color: white;
   font-weight: 600;
   padding-left: 5px;
+}
+
+.categorias a:hover {
+  color: #6495ed;
+  font-size: 1.3em;
+  transition: all 1.3s;
 }
